--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp2.1/Softwaredesign.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
-            // "console": "externalTerminal",
-            "console": "internalConsole",
+            "console": "externalTerminal",
+            // "console": "internalConsole",
             "stopAtEntry": false
         },
         {
